--- a/04-07/projetoV2.html
+++ b/04-07/projetoV2.html
@@ -182,8 +182,8 @@
 
       function saveMessage() {
         const textInput = document.querySelector("#inputMessage");
-
-        if (textInput.value === "") {
+        
+        if (textInput.value.trim() === "") {
           textInput.focus();
           return;
         }
