--- a/04-28/index.html
+++ b/04-28/index.html
@@ -7,7 +7,15 @@
     <title>Prova A01</title>
 </head>
 <body>
-    
+    <main>
+        <div class="modal">
+           <div class="flex">
+            <p>Conteudo da janelinha</p>
+            <button id="closeModal">Fechar</button>
+           </div>
+        </div>
+        <button id="openModal">Abrir Janela</button>
+    </main>
     <script src="scripts.js"></script>
 </body>
 </html>
